# rover-1

./: .gitignore  README.md  learning.md  plan.md  run_simulation.sh
scripts/: setup_pi5.sh  teleop_stamped.py  validate.py
scripts/hardware_tests/: README.md  test_encoders.py  test_i2c.py  test_imu.py  test_motors.py  test_power.py
src/rover2_base/: CMakeLists.txt  package.xml  rover2_base.xml
src/rover2_base/config/: rover2_controllers.yaml
src/rover2_base/include/rover2_base/: gpio_encoder.hpp  gpio_motor.hpp  rover2_hardware.hpp  visibility_control.h
src/rover2_base/src/: gpio_encoder.cpp  gpio_motor.cpp  rover2_hardware.cpp
src/rover2_bringup/: CMakeLists.txt  package.xml
src/rover2_bringup/config/: ekf.yaml  teleop.yaml
src/rover2_bringup/launch/: robot.launch.py  simulation.launch.py  teleop.launch.py
src/rover2_description/: CMakeLists.txt  package.xml
src/rover2_description/launch/: view_robot.launch.py
src/rover2_description/rviz/: rover2.rviz
src/rover2_description/urdf/: inertial_macros.xacro  materials.xacro  rover2.gazebo.xacro  rover2.ros2_control.xacro  rover2.urdf.xacro  rover2_hardware.urdf.xacro  rover2_mock.ros2_control.xacro  rover2_mock.urdf.xacro  rover2_sim.urdf.xacro
src/rover2_gazebo/: CMakeLists.txt  package.xml
src/rover2_gazebo/launch/: gazebo.launch.py
src/rover2_gazebo/worlds/: rover2_world.sdf
src/rover2_sensors/: package.xml  setup.cfg  setup.py
src/rover2_sensors/config/: sensors.yaml
src/rover2_sensors/launch/: sensors.launch.py
src/rover2_sensors/rover2_sensors/: __init__.py  ina219_node.py
src/rover2_vision/: package.xml  setup.cfg  setup.py
src/rover2_vision/config/: vision.yaml
src/rover2_vision/launch/: follow_object.launch.py
src/rover2_vision/rover2_vision/: dashboard_node.py  detector_node.py  follower_node.py
